--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -108,13 +108,12 @@ set $ws8 "8: 2 "
 set $ws9 "9: 3 "
 set $ws0 "10:  "
 
-set $home_ws $ws1
-set $browser_ws $ws2
-set $file_ws $ws3
-set $pdf_ws $ws5
-set $mail_ws $ws8
-set $chat_ws $ws9
-
+# Assign programs to ws
+assign [class="Firefox"]     $ws2
+assign [class="Nautilus"]    $ws3
+assign [class="Evince"]      $ws5
+assign [class="Thunderbird"] $ws6
+assign [class="Telegram"]    $ws0
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -200,6 +199,7 @@ bar {
 	status_command ~/.local/bin/i3bar.py
 	position top
 	font pango: Fira Mono Medium 11
+	separator_symbol " "
 	colors {
 		background #2E3440
 		statusline #D8DEE9
@@ -229,14 +229,6 @@ workspace $ws0 output VGA-2
 
 bindsym $mod+m move scratchpad
 bindsym $mod+Shift+m scratchpad show
-
-# Assign programs to ws
-assign [class="Firefox"]     $browser_ws
-assign [class="Evince"]      $pdf_ws
-assign [class="Zeal"]        $ws6
-assign [class="Nautilus"]    $file_ws
-assign [class="Thunderbird"] $mail_ws
-assign [class="Telegram"]    $chat_ws
 
 exec --no-startup-id /usr/lib/gnome-settings-daemon/gsd-xsettings
 exec_always --no-startup-id gnome-power-manager
