--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -31,7 +31,7 @@ font pango:Fira Mono 0
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec st
 
 # kill focused window
 bindsym $mod+q kill
