--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ emacs/.emacs.d/auto-save-list/
 emacs/.emacs.d/eshell/
 emacs/.emacs.d/url/
 emacs/.emacs.d/ido.last
+emacs/.emacs.d/configuration.el
