--- a/xfce4-i3/.config/i3/config
+++ b/xfce4-i3/.config/i3/config
@@ -87,9 +87,6 @@ bindsym $mod+e layout toggle split
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
 
-# change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
-
 # focus the parent container
 bindsym $mod+a focus parent
 
@@ -192,9 +189,30 @@ exec_always feh --bg-scale ~/.background
 exec_always ~/.local/bin/set_xkeyboard
 # start dmenu (a program launcher)
 bindsym $mod+o exec xfce4-appfinder --collapsed
+bindsym $mod+space exec xfce4-popup-whiskermenu
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
+
+bar {
+	status_command ~/.local/bin/i3bar.py
+	position top
+	font pango: Fira Mono Medium 11
+	separator_symbol " "
+	colors {
+		background #2E3440
+		statusline #D8DEE9
+		focused_workspace  #2E3440 #ECEFF4 #2E3440
+		inactive_workspace #2E3440 #2E3440 #ECEFF4
+		urgent_workspace   #2E3440 #BF616A #2E3440
+	}
+	tray_output primary
+	strip_workspace_numbers yes
+}
+
+# Gaps
+gaps inner 10
+gaps outer 5
 
 # Multi monitor
 workspace $ws1 output VGA-1
