--- a/xfce4-i3/.config/i3/config
+++ b/xfce4-i3/.config/i3/config
@@ -188,8 +188,9 @@ bindsym $mod+r mode "resize"
 exec_always feh --bg-scale ~/.background
 exec_always ~/.local/bin/set_xkeyboard
 # start dmenu (a program launcher)
-bindsym $mod+o exec xfce4-appfinder --collapsed
-bindsym $mod+space exec xfce4-popup-whiskermenu
+bindsym $mod+Shift+o exec xfce4-appfinder --collapsed
+bindsym $mod+o exec rofi -show drun
+bindsym $mod+u exec rofi -show window
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
