--- a/xfce4-i3/.config/i3/config
+++ b/xfce4-i3/.config/i3/config
@@ -190,8 +190,8 @@ exec_always feh --bg-scale ~/.background
 exec_always ~/.local/bin/set_xkeyboard
 # start dmenu (a program launcher)
 bindsym $mod+Shift+o exec xfce4-appfinder --collapsed
-bindsym $mod+o exec rofi -show drun
-bindsym $mod+u exec rofi -show window
+bindsym $mod+space exec rofi -show drun
+bindsym Mod1+Tab exec rofi -show window
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
