--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ emacs/.emacs.d/url/
 emacs/.emacs.d/ido.last
 emacs/.emacs.d/configuration.el
 emacs/.emacs.d/tramp
+
+fonts/.local/share/fonts/.uuid
