--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ emacs/.emacs.d/custom.el
 emacs/.emacs.d/session*
 emacs/.emacs.d/recentf
 emacs/.emacs.d/auctex-auto/
+emacs/.emacs.d/quelpa/
 
 fonts/.local/share/fonts/*/.uuid
 fonts/.local/share/fonts/.uuid
