--- a/xfce4-i3/.config/i3/config
+++ b/xfce4-i3/.config/i3/config
@@ -99,7 +99,7 @@ set $ws1 "1:  "
 set $ws2 "2:  "
 set $ws3 "3:  "
 set $ws8 "8:  "
-set $ws9 "9:  "
+set $ws9 "9:  "
 set $ws0 "10:  "
 
 # Assign programs to ws
