--- a/xfce4-i3/.config/i3/config
+++ b/xfce4-i3/.config/i3/config
@@ -169,7 +169,8 @@ mode "resize" {
 }
 
 #border pixel 1
-new_window 1pixel
+#new_window 1pixel
+hide_edge_borders smart
 # Colours!
 set_from_resource $black
 #class                  border    backgr.   text      indicator   child_border
@@ -187,18 +188,19 @@ exec_always feh --bg-scale ~/.background
 exec_always ~/.local/bin/set_xkeyboard
 # start dmenu (a program launcher)
 bindsym $mod+Shift+o exec xfce4-appfinder --collapsed
-bindsym $mod+space exec rofi -show drun
-bindsym Mod1+space exec rofi -show drun
-bindsym Mod1+Tab exec rofi -show window
+bindsym $mod+space exec dmenu_run
+bindsym Mod1+space exec dmenu_run
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 
 bar {
-	status_command ~/.local/bin/i3bar.py
+	#status_command ~/.local/bin/i3bar.py
+	status_command i3status
 	position top
 	font pango: Fira Mono Medium 11
 	separator_symbol " "
+	mode hide
 	colors {
 		background #2E3440
 		statusline #D8DEE9
@@ -209,10 +211,6 @@ bar {
 	tray_output primary
 	strip_workspace_numbers yes
 }
-
-# Gaps
-gaps inner 10
-gaps outer 5
 
 bindsym $mod+m move scratchpad
 bindsym $mod+Shift+m scratchpad show
