--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -14,24 +14,13 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Fira Mono 0
-
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
-
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn’t scale on retina/hidpi displays.
+font pango:Fira Mono 11
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec st
+bindsym $mod+Return exec gnome-terminal
 
 # kill focused window
 bindsym $mod+q kill
@@ -70,6 +59,9 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
+# toggle the bar
+bindsym $mod+i bar hidden_state toggle
+
 # split in horizontal orientation
 bindsym $mod+semicolon split h
 
@@ -87,34 +79,29 @@ bindsym $mod+e layout toggle split
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
 
-# change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
-
-# focus the parent container
-bindsym $mod+a focus parent
-
 # focus the child container
 #bindsym $mod+d focus child
 
 # Workspace Variables
-set $ws1 "1:  "
-set $ws2 "2:  "
-set $ws3 "3:  "
-set $ws4 "4:  "
-set $ws5 "5:  "
-set $ws6 "6:  "
-set $ws7 "7: 1 "
-set $ws8 "8: 2 "
-set $ws9 "9: 3 "
-set $ws0 "10:  "
+set $ws1 "1: 1 "
+set $ws2 "2: 2 "
+set $ws3 "3: 3 "
+set $ws4 "4: 4 "
+set $ws5 "5: 5 "
+set $ws6 "6: 6 "
+set $ws7 "7: 7 "
+set $ws8 "8: 8 "
+set $ws9 "9: 9 "
+set $ws0 "10: 0 "
+
 
 # Assign programs to ws
-assign [class="Firefox"]     $ws2
+assign [class="Firefox"]     $ws0
 assign [class="Nautilus"]    $ws3
-assign [class="Evince"]      $ws5
-assign [class="okular"]      $ws5
-assign [class="Thunderbird"] $ws6
-assign [class="Telegram"]    $ws0
+assign [class="Evince"]      $ws8
+assign [class="Telegram"]    $ws6
+assign [class="Thunderbird"] $ws7
+assign [class="okular"]      $ws8
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -175,6 +162,7 @@ mode "resize" {
 
 #border pixel 1
 new_window 1pixel
+hide_edge_borders both
 # Colours!
 set_from_resource $black
 #class                  border    backgr.   text      indicator   child_border
@@ -191,15 +179,18 @@ bindsym $mod+r mode "resize"
 exec_always feh --bg-scale ~/.background
 exec_always ~/.local/bin/set_xkeyboard
 # start dmenu (a program launcher)
-bindsym $mod+o exec rofi -show drun
+bindsym $mod+space exec rofi -show drun
+bindsym Mod1+space exec rofi -show drun
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 
 bar {
-	status_command ~/.local/bin/i3bar.py
+	status_command i3status
 	position top
-	font pango: Fira Mono Medium 11
+	mode hide
+	modifier none
+	font pango: Fira Mono 11
 	separator_symbol " "
 	colors {
 		background #2E3440
@@ -211,10 +202,6 @@ bar {
 	tray_output primary
 	strip_workspace_numbers yes
 }
-
-# Gaps
-gaps inner 10
-gaps outer 5
 
 # Multi monitor
 workspace $ws1 output VGA-1
@@ -231,5 +218,6 @@ workspace $ws0 output VGA-2
 bindsym $mod+m move scratchpad
 bindsym $mod+Shift+m scratchpad show
 
-exec --no-startup-id /usr/lib/gnome-settings-daemon/gsd-xsettings
-exec_always --no-startup-id gnome-power-manager
+# exec --no-startup-id /usr/lib/gnome-settings-daemon/gsd-xsettings
+# exec_always --no-startup-id gnome-power-manager
+exec_always ~/.local/bin/set_xkeyboard
