--- a/xfce4-i3/.config/i3/config
+++ b/xfce4-i3/.config/i3/config
@@ -14,7 +14,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Fira Mono 0
+font pango:Fira Mono 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -70,6 +70,9 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
+# toggle the bar
+bindsym $mod+i bar hidden_state toggle
+
 # split in horizontal orientation
 bindsym $mod+semicolon split h
 
@@ -86,9 +89,6 @@ bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
-
-# focus the parent container
-bindsym $mod+a focus parent
 
 # focus the child container
 #bindsym $mod+d focus child
@@ -169,8 +169,8 @@ mode "resize" {
 }
 
 #border pixel 1
-#new_window 1pixel
-hide_edge_borders smart
+new_window 1pixel
+hide_edge_borders both
 # Colours!
 set_from_resource $black
 #class                  border    backgr.   text      indicator   child_border
@@ -188,28 +188,30 @@ exec_always feh --bg-scale ~/.background
 exec_always ~/.local/bin/set_xkeyboard
 # start dmenu (a program launcher)
 bindsym $mod+Shift+o exec xfce4-appfinder --collapsed
-bindsym $mod+space exec dmenu_run
-bindsym Mod1+space exec dmenu_run
+bindsym $mod+space exec rofi -show drun
+bindsym Mod1+space exec rofi -show drun
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 
 bar {
-	#status_command ~/.local/bin/i3bar.py
-	status_command i3status
-	position top
-	font pango: Fira Mono Medium 11
-	separator_symbol " "
-	mode hide
-	colors {
-		background #2E3440
-		statusline #D8DEE9
-		focused_workspace  #2E3440 #ECEFF4 #2E3440
-		inactive_workspace #2E3440 #2E3440 #ECEFF4
-		urgent_workspace   #2E3440 #BF616A #2E3440
-	}
-	tray_output primary
-	strip_workspace_numbers yes
+    id bar-0
+    tray_output primary
+    status_command ~/.local/bin/i3bar.py
+    # status_command i3status
+    position top
+    font pango: Fira Mono Medium 9
+    separator_symbol " "
+    mode dock
+    modifier none
+    colors {
+	background #2E3440
+	statusline #D8DEE9
+	focused_workspace  #2E3440 #ECEFF4 #2E3440
+	inactive_workspace #2E3440 #2E3440 #ECEFF4
+	urgent_workspace   #2E3440 #BF616A #2E3440
+    }
+    strip_workspace_numbers yes
 }
 
 bindsym $mod+m move scratchpad
