--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -14,7 +14,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Fira Mono 11
+font pango:Fira Mono 9
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -186,12 +186,11 @@ bindsym Mod1+space exec rofi -show drun
 # finds out, if available)
 
 bar {
-	status_command ~/.local/bin/i3bar.py
+	status_command ~/.local/bin/i3bar.py --noborder --nobackground
 	position top
 	mode dock
-	modifier none
-	font pango: Fira Mono 11
-	separator_symbol " "
+	font pango: Fira Mono Medium 9
+	separator_symbol "   "
 	colors {
 		background #2E3440
 		statusline #D8DEE9
