--- a/xfce4-i3/.config/i3/config
+++ b/xfce4-i3/.config/i3/config
@@ -190,6 +190,7 @@ exec_always ~/.local/bin/set_xkeyboard
 bindsym $mod+Shift+o exec xfce4-appfinder --collapsed
 bindsym $mod+space exec rofi -show drun
 bindsym Mod1+space exec rofi -show drun
+bindsym $mod+Shift+p exec ~/.local/bin/pwgen_to_clip.sh
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -197,11 +198,11 @@ bindsym Mod1+space exec rofi -show drun
 bar {
     id bar-0
     tray_output primary
-    status_command ~/.local/bin/i3bar.py
+    status_command ~/.local/bin/i3bar.py --nobackground
     # status_command i3status
     position top
     font pango: Fira Mono Medium 9
-    separator_symbol " "
+    separator_symbol "   "
     mode dock
     modifier none
     colors {
