--- a/xfce4-i3/.config/i3/config
+++ b/xfce4-i3/.config/i3/config
@@ -83,7 +83,7 @@ bindsym $mod+v split v
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
+bindsym $mod+Shift+w layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
@@ -191,6 +191,11 @@ bindsym $mod+Shift+o exec xfce4-appfinder --collapsed
 bindsym $mod+space exec rofi -show drun
 bindsym Mod1+space exec rofi -show drun
 bindsym $mod+Shift+p exec ~/.local/bin/pwgen_to_clip.sh
+
+bindsym $mod+Shift+s [class=".*"] move workspace to output VGA-1
+bindsym $mod+s move workspace to output VGA-1
+bindsym $mod+Shift+y [class=".*"] move workspace to output VGA-2
+bindsym $mod+y move workspace to output VGA-2
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
