--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -79,16 +79,16 @@ bindsym $mod+Shift+m scratchpad show
 
 # * Workspaces
 # Workspace Variables
-set $ws1 "1: 1 "
-set $ws2 "2: 2 "
-set $ws3 "3: 3 "
+set $ws1 "1:  "
+set $ws2 "2:  "
+set $ws3 "3:  "
 set $ws4 "4: 4 "
 set $ws5 "5: 5 "
 set $ws6 "6: 6 "
-set $ws7 "7: 7 "
-set $ws8 "8: 8 "
-set $ws9 "9: 9 "
-set $ws0 "10: 0 "
+set $ws7 "7:  "
+set $ws8 "8:  "
+set $ws9 "9:  "
+set $ws0 "10:  "
 
 
 # Assign programs to ws
@@ -205,4 +205,5 @@ bar {
 }
 
 # * Autostart
+exec compton -bcCGfD 4
 exec_always ~/.local/bin/set_xkeyboard
