--- a/xfce4-i3/.config/i3/config
+++ b/xfce4-i3/.config/i3/config
@@ -190,12 +190,13 @@ exec_always ~/.local/bin/set_xkeyboard
 bindsym $mod+Shift+o exec xfce4-appfinder --collapsed
 bindsym $mod+space exec rofi -show drun
 bindsym Mod1+space exec rofi -show drun
-bindsym $mod+Shift+p exec ~/.local/bin/pwgen_to_clip.sh
 
 bindsym $mod+Shift+s [class=".*"] move workspace to output VGA-1
 bindsym $mod+s move workspace to output VGA-1
 bindsym $mod+Shift+y [class=".*"] move workspace to output VGA-2
 bindsym $mod+y move workspace to output VGA-2
+
+bindsym $mod+Shift+p exec scrot
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
