--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -198,7 +198,7 @@ bar {
 	status_command i3bar.py --nobackground
 	position top
 	mode dock
-	font pango: Font Awesome 10, Source Code Pro 10
+	font pango: Font Awesome 10, Overpass Mono 10
 	separator_symbol " "
 	colors {
 		background #202020
