--- a/xfce4-i3/.config/i3/config
+++ b/xfce4-i3/.config/i3/config
@@ -31,7 +31,7 @@ font pango:Fira Mono 9
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec xfce4-terminal
+bindsym $mod+Return exec gnome-terminal
 
 # kill focused window
 bindsym $mod+q kill
