code: git stuff

--- a/code/.config/Code/User/settings.json
+++ b/code/.config/Code/User/settings.json
@@ -3,5 +3,6 @@
     "editor.minimap.enabled": false,
     "editor.renderWhitespace": "none",
     "breadcrumbs.enabled": true,
-    "git.autofetch": true
+    "git.autofetch": true,
+    "git.confirmSync": false
 }
