--- a/xfce4-i3/.config/i3/config
+++ b/xfce4-i3/.config/i3/config
@@ -98,6 +98,7 @@ bindsym $mod+Shift+space floating toggle
 set $ws1 "1:  "
 set $ws2 "2:  "
 set $ws3 "3:  "
+set $ws4 "4: 4"
 set $ws8 "8:  "
 set $ws9 "9:  "
 set $ws0 "10:  "
@@ -115,6 +116,7 @@ assign [class="Firefox"]     $ws0
 bindsym $mod+1 workspace $ws1
 bindsym $mod+2 workspace $ws2
 bindsym $mod+3 workspace $ws3
+bindsym $mod+4 workspace $ws4
 bindsym $mod+8 workspace $ws8
 bindsym $mod+9 workspace $ws9
 bindsym $mod+0 workspace $ws0
@@ -123,6 +125,7 @@ bindsym $mod+0 workspace $ws0
 bindsym $mod+Shift+1 move container to workspace $ws1
 bindsym $mod+Shift+2 move container to workspace $ws2
 bindsym $mod+Shift+3 move container to workspace $ws3
+bindsym $mod+Shift+4 move container to workspace $ws4
 bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws0
