--- a/xfce4-i3/.config/i3/config
+++ b/xfce4-i3/.config/i3/config
@@ -98,13 +98,13 @@ bindsym $mod+Shift+space floating toggle
 set $ws1 "1:  "
 set $ws2 "2:  "
 set $ws3 "3:  "
-set $ws4 "4: 4"
+set $ws4 "4: E "
 set $ws8 "8:  "
 set $ws9 "9:  "
 set $ws0 "10:  "
 
 # Assign programs to ws
-assign [class="Emacs"]       $ws2
+assign [class="Emacs"]       $ws4
 assign [class="Nautilus"]    $ws3
 assign [class="Thunar"]      $ws3
 assign [class="Evince"]      $ws8
