--- a/code/.config/Code/User/settings.json
+++ b/code/.config/Code/User/settings.json
@@ -19,5 +19,10 @@
     "vim.handleKeys": {
         "<C-d>": true,
         "<C-k>": false,
-    }
+        "<C-f>": false,
+        "<C-q>": false,
+        "<C-r>": false,
+        "<C-w>": false,
+    },
+    "workbench.colorTheme": "Nord"
 }
