--- a/code/.config/Code/User/settings.json
+++ b/code/.config/Code/User/settings.json
@@ -24,5 +24,5 @@
         "<C-r>": false,
         "<C-w>": false,
     },
-    "workbench.colorTheme": "Nord"
+    "workbench.colorTheme": "Dracula"
 }
