--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ emacs/.emacs.d/recentf
 emacs/.emacs.d/auctex-auto/
 emacs/.emacs.d/quelpa/
 emacs/.emacs.d/transient/
+emacs/.emacs.d/smex-items
+emacs/.emacs.d/.python-environments/
 
 fonts/.local/share/fonts/*/.uuid
 fonts/.local/share/fonts/.uuid
