--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -85,7 +85,10 @@ bindsym $mod+p exec ~/.local/bin/stowed/pass_rofi.sh
 # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 10
 bindsym XF86MonBrightnessDown exec xbacklight -dec 10
-
+# Pulse Audio controls
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 1 +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 1 -5% #decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 1 toggle # mute sound
 
 # * Workspaces
 # Workspace Variables
