add nm-applet to autostart

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -192,6 +192,7 @@ bar {
 }
 
 # * Autostart
+exec nm-applet
 exec compton -bfD 4
 exec_always ~/.local/bin/stowed/set_xkeyboard
 exec_always feh --bg-scale ~/.background
