--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -15,6 +15,8 @@
 	aa = add --all
 	rc = rebase --continue
 	ls = ls-files
+	ciao = checkout -- .
+	purr = pull --rebase
 
 [diff "odf"]
 	binary = true
