--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -66,8 +66,6 @@ bindsym $mod+e layout toggle split
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
 
-# reload the configuration file
-bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 # bindsym $mod+Shift+r exec ~/.local/bin/i3_restart
 bindsym $mod+Shift+r exec "i3-msg restart"
@@ -200,3 +198,6 @@ exec_always feh --bg-scale ~/.background
 
 # * Floating windows
 for_window [class="(?i)blueman-manager"] floating enable
+for_window [class="Gnome-terminal" title="CALCULATOR"] move scratchpad
+bindsym $mod+c [title="CALCULATOR"] scratchpad show
+bindsym $mod+Shift+c exec gnome-terminal --profile=calc
