--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -59,9 +59,9 @@ bindsym $mod+v split v
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
+bindsym $mod+Shift+w layout stacking
 bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+bindsym $mod+s layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -73,12 +73,15 @@ bindsym $mod+Shift+r exec "i3-msg restart"
 # bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 bindsym $mod+Shift+e exit
 
+bindsym $mod+e exec emacs
+
 # scratchpad
 bindsym $mod+m move scratchpad
 bindsym $mod+Shift+m scratchpad show
 
 # passwords
 bindsym $mod+p exec ~/.local/bin/stowed/pass_rofi.sh
+bindsym $mod+Shift+p exec scrot
 
 # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 10
@@ -87,6 +90,23 @@ bindsym XF86MonBrightnessDown exec xbacklight -dec 10
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+
+# * Launcher mode
+set $mode_launcher Launch: [b]rowser [e]macs [t]erm [s]t [f]iles [c]hat
+bindsym $mod+o mode "$mode_launcher"
+
+mode "$mode_launcher" {
+     set $esc mode "default"
+     bindsym b exec firefox; $esc
+     bindsym e exec emacs; $esc
+     bindsym t exec gnome-terminal; $esc
+     bindsym s exec st; $esc
+     bindsym f exec nautilus; $esc
+     bindsym c exec telegram-desktop; $esc
+
+     bindsym Escape mode "default"
+     bindsym Return mode "default"
+}
 
 # * Workspaces
 # ** Workspace Variables
@@ -102,10 +122,13 @@ set $ws9 "9: wild "
 set $ws0 "10: web "
 
 # ** Assign programs to ws
+assign [class="Emacs"]       $ws2
+assign [class="Evince"]      $ws8
 assign [class="Firefox"]     $ws0
 assign [class="Nautilus"]    $ws3
-assign [class="Evince"]      $ws8
+assign [class="okular"]      $ws8
 assign [class="Telegram"]    $ws6
+assign [class="Thunar"]      $ws3
 assign [class="Thunderbird"] $ws7
 assign [class="okular"]      $ws8
 
@@ -145,6 +168,11 @@ workspace $ws8 output VGA-2
 workspace $ws9 output VGA-2
 workspace $ws0 output VGA-2
 
+# ** Move workspaces to monitors
+bindsym $mod+Shift+y [class=".*"] move workspace to output VGA-1
+bindsym $mod+y move workspace to output VGA-1
+bindsym $mod+Shift+u [class=".*"] move workspace to output VGA-2
+bindsym $mod+u move workspace to output VGA-2
 
 # ** Resize window mode
 bindsym $mod+r mode "resize"
