--- a/Xresources/.Xresources.d/solarized-light.conf
+++ b/Xresources/.Xresources.d/solarized-light.conf
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: Hristo Filaretov <h.filaretov@campus.tu-berlin.de>
+# SPDX-License-Identifier: MIT
 ! special
 *.foreground:   #586e75
 *.background:   #fdf6e3
