--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: Hristo Filaretov <h.filaretov@campus.tu-berlin.de>
+# SPDX-License-Identifier: MIT
 bin/
 i3/.config/i3/config
 nvim/.config/nvim/sessions/
@@ -24,6 +26,19 @@ emacs/.emacs.d/quelpa/
 emacs/.emacs.d/transient/
 emacs/.emacs.d/smex-items
 emacs/.emacs.d/.python-environments/
+
+fish/.config/fish/fish_variables
+fish/.config/fish/functions/z.fish
+nvim/.config/nvim/settings.json
+nvim/.config/nvim/spell/de.utf-8.add
+nvim/.config/nvim/spell/de.utf-8.add.spl
+nvim/.config/nvim/spell/de.utf-8.spl
+nvim/.config/nvim/spell/en.utf-8.add
+nvim/.config/nvim/spell/en.utf-8.add.spl
+nvim/.config/nvim/spell/en.utf-8.spl
+nvim/.config/nvim/spell/en.utf-8.sug
+vim/.vim/autoload/pathogen.vim
+
 
 fonts/.local/share/fonts/*/.uuid
 fonts/.local/share/fonts/.uuid
