--- a/Xresources/.Xresources.d/solarized-dark.conf
+++ b/Xresources/.Xresources.d/solarized-dark.conf
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: Hristo Filaretov <h.filaretov@campus.tu-berlin.de>
+# SPDX-License-Identifier: MIT
 ! special
 *.foreground:   #93a1a1
 *.background:   #002b36
