--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Hristo Filaretov <h.filaretov@campus.tu-berlin.de>
+# SPDX-FileCopyrightText: 2019 Hristo Filaretov <h.filaretov@campus.tu-berlin.de>
 # SPDX-License-Identifier: MIT
 [submodule "nvim/.config/nvim/pack/minpac/opt/minpac"]
 	path = nvim/.config/nvim/pack/minpac/opt/minpac
