--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -5,7 +5,7 @@
 # ** Font
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Fira Mono 9
+font pango:Inconsolata 9
 # ** Modifiers
 # Mod1 = Alt; Mod4 = Super
 set $mod Mod4
@@ -18,7 +18,7 @@ set $down  j
 set $up    k
 set $right l
 # start a terminal
-bindsym $mod+Return exec gnome-terminal
+bindsym $mod+Return exec i3-sensible-terminal
 # kill focused window
 bindsym $mod+q kill
 # lock
@@ -208,14 +208,14 @@ hide_edge_borders both
 # start dmenu (a program launcher)
 bindsym $mod+space exec rofi -show drun
 bindsym Mod1+space exec rofi -show drun
+bindsym $mod+d exec dmenu_run
 
 # * Bar
 bar {
-	status_command ~/.local/bin/stowed/i3bar.py --nobackground
+	status_command i3blocks
 	position top
 	mode dock
 	font pango: Source Code Pro 10
-	separator_symbol "   "
 	tray_output primary
 	strip_workspace_numbers no
 }
