--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -212,7 +212,7 @@ bindsym $mod+d exec dmenu_run
 
 # * Bar
 bar {
-	status_command i3blocks
+	status_command ~/.local/bin/stowed/i3bar.py
 	position top
 	mode dock
 	font pango: Source Code Pro 10
