lots of small changes

--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -422,14 +422,12 @@ map )     jump_non
 
 map gu cd ~/docs/cloud/Uni
 map gd cd ~/dev
+map gw cd ~/downloads
 map gh cd ~
-map ge cd /etc
+map g. cd ~/dev/dotfiles/
 map gl cd -r .
 map gL cd -r %f
 map gi eval fm.cd('/run/media/' + os.getenv('USER'))
-map gM cd /mnt
-map gs cd /srv
-map gp cd /tmp
 map gR eval fm.cd(ranger.RANGERDIR)
 map g/ cd /
 map g? cd /usr/share/doc/ranger
