--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -420,17 +420,18 @@ map }     traverse
 map {     traverse_backwards
 map )     jump_non
 
-map gu cd ~/docs/cloud/Uni
-map gd cd ~/dev
-map gw cd ~/downloads
-map gh cd ~
-map g. cd ~/dev/dotfiles/
-map gl cd -r .
-map gL cd -r %f
-map gi eval fm.cd('/run/media/' + os.getenv('USER'))
-map gR eval fm.cd(ranger.RANGERDIR)
-map g/ cd /
-map g? cd /usr/share/doc/ranger
+map gdu cd ~/docs/cloud/Uni
+map gdc cd ~/docs/cloud/Documents/Professional/
+map gdd cd ~/dev
+map gdw cd ~/downloads
+map gdh cd ~
+map gd. cd ~/dev/dotfiles
+map gdl cd -r .
+map gdL cd -r %f
+map gdi eval fm.cd('/run/media/' + os.getenv('USER'))
+map gdR eval fm.cd(ranger.RANGERDIR)
+map gd/ cd /
+map gd? cd /usr/share/doc/ranger
 
 # External Programs
 map E  edit
