fix ranger shortcut for debian

--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -428,7 +428,7 @@ map gdh cd ~
 map gd. cd ~/dev/dotfiles
 map gdl cd -r .
 map gdL cd -r %f
-map gdi eval fm.cd('/run/media/' + os.getenv('USER'))
+map gdi eval fm.cd('/media/' + os.getenv('USER'))
 map gdR eval fm.cd(ranger.RANGERDIR)
 map gd/ cd /
 map gd? cd /usr/share/doc/ranger
