update dir cd shortcuts

--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -420,18 +420,17 @@ map }     traverse
 map {     traverse_backwards
 map )     jump_non
 
-map gdu cd ~/docs/cloud/Uni
-map gdc cd ~/docs/cloud/Documents/Professional/
+map gdu cd ~/cloud/uni
+map gdc cd ~/cloud/docs/cv/
 map gdd cd ~/dev
 map gdw cd ~/downloads
-map gdh cd ~
 map gd. cd ~/dev/dotfiles
 map gdl cd -r .
 map gdL cd -r %f
-map gdi eval fm.cd('/media/' + os.getenv('USER'))
-map gdR eval fm.cd(ranger.RANGERDIR)
-map gd/ cd /
-map gd? cd /usr/share/doc/ranger
+map gi eval fm.cd('/media/' + os.getenv('USER'))
+map g/ cd /
+map gh cd ~
+map g? cd /usr/share/doc/ranger
 
 # External Programs
 map E  edit
