--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -420,11 +420,14 @@ map }     traverse
 map {     traverse_backwards
 map )     jump_non
 
-map gdu cd ~/cloud/uni
-map gdc cd ~/cloud/docs/cv/
-map gdd cd ~/dev
-map gdw cd ~/downloads
-map gd. cd ~/dev/dotfiles
+map gdc cd ~/cloud/
+map gdu cd ~/cloud/uni/
+map gdp cd ~/cloud/docs/cv/
+map gdb cd ~/cloud/books/
+map gdt cd ~/cloud/textbooks/
+map gdd cd ~/dev/
+map gdw cd ~/downloads/
+map gd. cd ~/dev/dotfiles/
 map gdl cd -r .
 map gdL cd -r %f
 map gi eval fm.cd('/media/' + os.getenv('USER'))
