--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -200,7 +200,7 @@ mode "resize" {
 	bindsym Right resize grow width 10 px or 10 ppt
 	# back to normal: Enter or Escape
 	bindsym Return mode "default"
-	bindsym kscape mode "default"
+	bindsym Escape mode "default"
 }
 
 # * Window decorations
