--- a/terminator/.config/terminator/config
+++ b/terminator/.config/terminator/config
@@ -17,6 +17,8 @@
     show_titlebar = False
     scrollbar_position = hidden
     palette = "#3b4252:#bf616a:#a3be8c:#ebcb8b:#81a1c1:#b48ead:#88c0d0:#e5e9f0:#4c566a:#bf616a:#a3be8c:#ebcb8b:#81a1c1:#b48ead:#8fbcbb:#eceff4"
+    use_custom_command = True
+    custom_command = /bin/fish
     use_system_font = False
 [layouts]
   [[default]]
