--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -217,7 +217,7 @@ bindsym $mod+d exec dmenu_run
 # * Bar
 bar {
 	#status_command ~/.local/bin/stowed/i3bar.py
-	position top
+	position bottom
 	mode dock
 	font pango: Source Code Pro 10
 	tray_output primary
