--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ emacs/.emacs.d/quelpa/
 emacs/.emacs.d/transient/
 emacs/.emacs.d/smex-items
 emacs/.emacs.d/.python-environments/
+emacs/.emacs.d/.lsp-session-v1
 
 fish/.config/fish/fish_variables
 fish/.config/fish/functions/z.fish
