--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -216,7 +216,7 @@ bindsym $mod+d exec dmenu_run
 
 # * Bar
 bar {
-	#status_command ~/.local/bin/stowed/i3bar.py
+	status_command ~/.local/bin/stowed/i3bar.py
 	position top
 	mode dock
 	font pango: Source Code Pro 10
