--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -5,7 +5,7 @@
 # ** Font
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Inconsolata 9
+font pango:Source Code Pro, FontAwesome 9
 # ** Modifiers
 # Mod1 = Alt; Mod4 = Super
 set $mod Mod4
@@ -222,6 +222,7 @@ bar {
 	font pango: Source Code Pro 10
 	tray_output primary
 	strip_workspace_numbers no
+	separator_symbol "  "
 }
 
 # * Floating windows
