--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -18,7 +18,7 @@ set $down  j
 set $up    k
 set $right l
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec terminator
 # kill focused window
 bindsym $mod+q kill
 # lock
