--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ emacs/.emacs.d/transient/
 emacs/.emacs.d/smex-items
 emacs/.emacs.d/.python-environments/
 emacs/.emacs.d/.lsp-session-v1
+emacs/.emacs.d/projectile-bookmarks.eld
 
 fish/.config/fish/fish_variables
 fish/.config/fish/functions/z.fish
