--- a/terminator/.config/terminator/config
+++ b/terminator/.config/terminator/config
@@ -12,7 +12,7 @@
     icon_bell = False
     background_color = "#2e3440"
     cursor_color = "#D8DEE9"
-    font = Source Code Pro 10
+    font = Go Mono 11
     foreground_color = "#d8dee9"
     show_titlebar = False
     scrollbar_position = hidden
