--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # SPDX-FileCopyrightText: 2019 Hristo Filaretov <h.filaretov@campus.tu-berlin.de>
 # SPDX-License-Identifier: MIT
+#
+bin/.local/bin/
 nvim/.config/nvim/sessions/
 nvim/.config/nvim/pack/
 vim/.vim/tmp/
