play around with fonts and prompts

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2,9 +2,9 @@ include solarized-dark.conf
 
 shell fish
 
-font_family Source Code Pro
+font_family Fira Code
 font_size 10
-disable_ligatures always
+disable_ligatures never
 
 cursor_shape block
 cursor_blink_interval -1
