--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -5,7 +5,7 @@
 # ** Font
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Source Code Pro, FontAwesome 9
+font pango:Fira Code 9
 # ** Modifiers
 # Mod1 = Alt; Mod4 = Super
 set $mod Mod4
@@ -18,7 +18,7 @@ set $down  j
 set $up    k
 set $right l
 # start a terminal
-bindsym $mod+Return exec terminator
+bindsym $mod+Return exec gnome-terminal
 # kill focused window
 bindsym $mod+q kill
 # lock
@@ -214,15 +214,35 @@ bindsym $mod+space exec rofi -show drun
 bindsym Mod1+space exec rofi -show drun
 bindsym $mod+d exec dmenu_run
 
+# class                 border  bground text    indicator child_border
+client.focused          #6272A4 #6272A4 #F8F8F2 #6272A4   #6272A4
+client.focused_inactive #44475A #44475A #F8F8F2 #44475A   #44475A
+client.unfocused        #282A36 #282A36 #BFBFBF #282A36   #282A36
+client.urgent           #44475A #FF5555 #F8F8F2 #FF5555   #FF5555
+client.placeholder      #282A36 #282A36 #F8F8F2 #282A36   #282A36
+
+client.background       #F8F8F2
+
 # * Bar
 bar {
 	status_command ~/.local/bin/stowed/i3bar.py
 	position top
 	mode dock
-	font pango: Source Code Pro 10
+	font pango: Fira Code 10
 	tray_output primary
 	strip_workspace_numbers no
 	separator_symbol "  "
+	colors {
+		background #282A36
+		statusline #F8F8F2
+		separator  #44475A
+
+		focused_workspace  #44475A #44475A #F8F8F2
+		active_workspace   #282A36 #44475A #F8F8F2
+		inactive_workspace #282A36 #282A36 #BFBFBF
+		urgent_workspace   #FF5555 #FF5555 #F8F8F2
+		binding_mode       #FF5555 #FF5555 #F8F8F2
+	}
 }
 
 # * Floating windows
