--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -214,14 +214,32 @@ bindsym $mod+space exec rofi -show drun
 bindsym Mod1+space exec rofi -show drun
 bindsym $mod+d exec dmenu_run
 
+# Nord theme colors
+set $nord0   #2E3440
+set $nord1   #3B4252
+set $nord2   #434C5E
+set $nord3   #4C566A
+set $nord4   #D8DEE9
+set $nord5   #E5E9F0
+set $nord6   #ECEFF4
+set $nord7   #8FBCBB
+set $nord8   #88C0D0
+set $nord9   #81A1C1
+set $nord10  #5E81AC
+set $nord11  #BF616A
+set $nord12  #D08770
+set $nord13  #EBCB8B
+set $nord14  #A3BE8C
+set $nord15  #B48EAD
+
 # class                 border  bground text    indicator child_border
-client.focused          #6272A4 #6272A4 #F8F8F2 #6272A4   #6272A4
+client.focused          $nord3  $nord3  $nord6  #6272A4   #6272A4
 client.focused_inactive #44475A #44475A #F8F8F2 #44475A   #44475A
-client.unfocused        #282A36 #282A36 #BFBFBF #282A36   #282A36
+client.unfocused        $nord0  $nord0  $nord4  #282A36   #282A36
 client.urgent           #44475A #FF5555 #F8F8F2 #FF5555   #FF5555
 client.placeholder      #282A36 #282A36 #F8F8F2 #282A36   #282A36
 
-client.background       #F8F8F2
+client.background       $nord0
 
 # * Bar
 bar {
@@ -233,15 +251,15 @@ bar {
 	strip_workspace_numbers no
 	separator_symbol "  "
 	colors {
-		background #282A36
-		statusline #F8F8F2
-		separator  #44475A
+		background $nord0
+		statusline $nord6
+		separator  $nord3
 
-		focused_workspace  #44475A #44475A #F8F8F2
-		active_workspace   #282A36 #44475A #F8F8F2
-		inactive_workspace #282A36 #282A36 #BFBFBF
-		urgent_workspace   #FF5555 #FF5555 #F8F8F2
-		binding_mode       #FF5555 #FF5555 #F8F8F2
+		focused_workspace  $nord3 $nord3 $nord6
+		active_workspace   $nord0 $nord0 $nord4
+		inactive_workspace $nord0 $nord0 $nord4
+		urgent_workspace   $nord11 $nord11 $nord4
+		binding_mode       $nord0 $nord0 $nord4
 	}
 }
 
