--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,4 +1,4 @@
-add_newline = false
+add_newline = true
 
 [character]
 symbol = "λ"
@@ -28,4 +28,4 @@ symbol = "java::"
 symbol = "ruby::"
 
 [line_break]
-disabled = true
+disabled = false
