--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -5,7 +5,7 @@
 # ** Font
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Fira Code 9
+font pango:Iosevka 9
 # ** Modifiers
 # Mod1 = Alt; Mod4 = Super
 set $mod Mod4
@@ -92,8 +92,8 @@ bindsym $mod+p exec ~/.local/bin/stowed/pass_rofi.sh
 bindsym $mod+Shift+p exec scrot
 
 # Sreen brightness and audio volume controls
-bindsym XF86MonBrightnessUp   exec xbacklight -inc  10
-bindsym XF86MonBrightnessDown exec xbacklight -dec  10
+bindsym XF86MonBrightnessUp   exec brightnessctl s +10%
+bindsym XF86MonBrightnessDown exec brightnessctl s -- -10%
 bindsym XF86AudioRaiseVolume  exec --no-startup-id pactl set-sink-volume 0 +5%    # increase sound volume
 bindsym XF86AudioLowerVolume  exec --no-startup-id pactl set-sink-volume 0 -5%    # decrease sound volume
 bindsym XF86AudioMute         exec --no-startup-id pactl set-sink-mute   0 toggle # mute     sound
@@ -246,7 +246,7 @@ bar {
 	status_command ~/.local/bin/stowed/i3bar.py
 	position top
 	mode dock
-	font pango: Fira Code 9
+	font pango: Iosevka 9
 	tray_output primary
 	strip_workspace_numbers no
 	separator_symbol "  "
