--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -5,7 +5,7 @@
 # ** Font
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Fira Code 9
+font pango:Iosevka 9
 # ** Modifiers
 # Mod1 = Alt; Mod4 = Super
 set $mod Mod4
@@ -70,7 +70,7 @@ bindsym $mod+s       layout toggle split
 bindsym $mod+Shift+space floating toggle
 
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r exec "i3-msg restart"
+bindsym $mod+Shift+r exec "swaymsg reload"
 # bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 bindsym $mod+Shift+e exit
 
@@ -205,13 +205,13 @@ mode "resize" {
 
 # * Window decorations
 #border pixel 1
-new_window 1pixel
+default_border none
 hide_edge_borders both
 
-# * Rofi
+# * wofi
 # start dmenu (a program launcher)
-bindsym $mod+space exec rofi -show drun
-bindsym Mod1+space exec rofi -show drun
+bindsym $mod+space exec wofi --show drun
+bindsym Mod1+space exec wofi --show drun
 bindsym $mod+d exec dmenu_run
 
 # Nord theme colors
@@ -270,4 +270,10 @@ for_window [class="(?i)x-terminal-emulator" title="ALSAMIXER"] floating enable
 bindsym $mod+c [title="CALCULATOR"] scratchpad show
 bindsym $mod+Shift+c exec gnome-terminal --profile=calc
 
-exec ~/.local/bin/stowed/wm_startup.sh
+#exec ~/.local/bin/stowed/wm_startup.sh
+
+input type:keyboard {
+  xkb_layout us,bg
+  xkb_variant ,phonetic
+  xkb_options ctrl:no_caps
+}
