--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -428,6 +428,8 @@ map gdt cd ~/cloud/textbooks/
 map gdd cd ~/dev/
 map gdw cd ~/downloads/
 map gd. cd ~/dev/dotfiles/
+map gdmm cd ~/media/
+map gdmu cd ~/media/uni/
 map gdl cd -r .
 map gdL cd -r %f
 map gi eval fm.cd('/media/' + os.getenv('USER'))
