lots of stuff, sorry again

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -52,3 +52,9 @@
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
 	required = true
+
+[gitlab]
+	host = ho-git.ipk.fraunhofer.de
+	token = keeUmxoozdhb5HZgV2AV
+	tls = true
+	format = text
