--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -5,7 +5,7 @@
 # ** Font
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Iosevka 9
+font pango:Iosevka 10
 # ** Modifiers
 # Mod1 = Alt; Mod4 = Super
 set $mod Mod4
@@ -77,10 +77,6 @@ bindsym $mod+Shift+e exit
 # start the operating system
 bindsym $mod+e exec kitty ranger
 
-# start the editor
-bindsym $mod+n exec "terminator -e 'nvim -c :terminal'"
-bindsym $mod+g exec "terminator -T ALSAMIXER -e 'alsamixer'"
-
 # scratchpad
 bindsym $mod+m       move scratchpad
 bindsym $mod+Shift+m scratchpad show
@@ -94,9 +90,9 @@ bindsym $mod+Shift+p exec scrot
 # Sreen brightness and audio volume controls
 bindsym XF86MonBrightnessUp   exec brightnessctl s +10%
 bindsym XF86MonBrightnessDown exec brightnessctl s -- -10%
-bindsym XF86AudioMute         exec --no-startup-id pactl set-sink-mute 0 toggle
-bindsym XF86AudioRaiseVolume  exec --no-startup-id pactl set-sink-volume 0 +5%
-bindsym XF86AudioLowerVolume  exec --no-startup-id pactl set-sink-volume 0 -5%
+bindsym XF86AudioMute         exec --no-startup-id pactl set-sink-mute $(pactl list sinks short | grep RUNNING | cut -c 1) toggle
+bindsym XF86AudioRaiseVolume  exec --no-startup-id pactl set-sink-volume $(pactl list sinks short | grep RUNNING | cut -c 1) +5%
+bindsym XF86AudioLowerVolume  exec --no-startup-id pactl set-sink-volume $(pactl list sinks short | grep RUNNING | cut -c 1) -5%
 bindsym XF86AudioMicMute      exec --no-startup-id pactl set-source-mute 1 toggle
 
 # * Workspaces
