--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -5,7 +5,7 @@
 # ** Font
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Iosevka 10
+font pango:Iosevka Medium 10
 # ** Modifiers
 # Mod1 = Alt; Mod4 = Super
 set $mod Mod4
@@ -90,11 +90,13 @@ bindsym $mod+Shift+p exec scrot
 # Sreen brightness and audio volume controls
 bindsym XF86MonBrightnessUp   exec brightnessctl s +10%
 bindsym XF86MonBrightnessDown exec brightnessctl s -- -10%
-bindsym XF86AudioMute         exec --no-startup-id pactl set-sink-mute $(pactl list sinks short | grep RUNNING | cut -c 1) toggle
-bindsym XF86AudioRaiseVolume  exec --no-startup-id pactl set-sink-volume $(pactl list sinks short | grep RUNNING | cut -c 1) +5%
-bindsym XF86AudioLowerVolume  exec --no-startup-id pactl set-sink-volume $(pactl list sinks short | grep RUNNING | cut -c 1) -5%
+#bindsym XF86AudioRaiseVolume  exec --no-startup-id pactl set-sink-volume $(pactl list sinks short | grep RUNNING | cut -c 1) +5%
+#bindsym XF86AudioLowerVolume  exec --no-startup-id pactl set-sink-volume $(pactl list sinks short | grep RUNNING | cut -c 1) -5%
+#bindsym XF86AudioMute         exec --no-startup-id pactl set-sink-mute $(pactl list sinks short | grep RUNNING | cut -c 1) toggle
 bindsym XF86AudioMicMute      exec --no-startup-id pactl set-source-mute 1 toggle
-
+bindsym XF86AudioMute         exec --no-startup-id pulsemixer --toggle-mute
+bindsym XF86AudioRaiseVolume  exec --no-startup-id pulsemixer --change-volume +5
+bindsym XF86AudioLowerVolume  exec --no-startup-id pulsemixer --change-volume -5
 # * Workspaces
 # ** Workspace Variables
 set $ws1 "1: 1 "
@@ -236,7 +238,7 @@ bar {
     position top
     mode dock
     modifier None
-    font pango: Iosevka Medium 9
+    font pango: Iosevka Medium 10
     tray_output primary
     strip_workspace_numbers yes
     separator_symbol "  "
