--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,4 +1,5 @@
-include nord.conf
+include weatherwax.conf
+
 
 shell fish
 
@@ -6,10 +7,11 @@ cursor_shape beam
 cursor_blink_interval 0
 
 disable_ligatures always
-font_size        10.5
-font_family      Iosevka Term
-bold_font        Iosevka Term Bold
-italic_font      Iosevka Term Italic
-bold_italic_font Iosevka Term Bold Italic
+font_size        13
+font_family      Iosevka Medium
+bold_font        Iosevka Bold
+italic_font      Iosevka Medium Italic
+bold_italic_font Iosevka Bold Italic
 
 allow_remote_control true
+
